feat: implemented LLW Register